# benchmark

./: README.md  Readme.md  main.py  pyproject.toml  readme.md
nbody/: _nbody.c  compile.py  nbody_1.c  nbody_1.h  nbody_2.py  nbody_c.py
